<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/tlloo"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"

    tools:context=".MainActivity">








    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pya"
        android:textSize="20dp"
        android:textColor="#f000"/>


    <ImageView
        android:id="@+id/image"
        android:layout_width="wrap_content"
        android:layout_height="280dp"
        android:src="@drawable/pyta" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="100dp"
        >

        <Button
            android:id="@+id/tak"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/T"
            android:textSize="20dp"
            android:onClick="tak"
            >


        </Button>
        <Button
            android:id="@+id/nie"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/N"
            android:textSize="20dp"
            android:onClick="nie"
            >

        </Button>
        <TextView
            android:id="@+id/k"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textSize="20dp"
            android:text=""/>
    </LinearLayout>

    <Button
        android:id="@+id/button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/wyn"
        android:textColor="@color/colorjj"
        android:textSize="20dp"
        android:enabled="false"
        android:visibility="invisible"
        android:background="@color/colorkk"
        android:onClick="ap"
        />
    <Button
        android:id="@+id/buttons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/wyns"
        android:textColor="@color/colorjj"
        android:textSize="20dp"
        android:enabled="false"
        android:visibility="invisible"
        android:background="@color/colorkk"
        android:onClick="app"
        />

</LinearLayout>




