<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:background="@drawable/start"
android:layout_height="match_parent"
tools:context=".MainActivity"
    android:orientation="vertical">

    <EditText
        android:id="@+id/editEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/colorjj"
        android:textSize="30dp"
        android:ems="10"
        android:textColorHint="@color/colorjj"
        android:hint="@string/email"
        android:inputType="textEmailAddress" />
    <EditText
        android:id="@+id/editPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/colorjj"
        android:textSize="30dp"
        android:ems="10"
        android:textColorHint="@color/colorjj"
        android:hint="@string/haslo"
        android:inputType="textEmailAddress" />

    <Button
        android:id="@+id/buttonsign"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sign" />


</LinearLayout>




