<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@drawable/prawko"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="50dp"
        android:orientation="vertical"
        >
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/tekst"
                android:textColor="#f00"
                android:textSize="45dp"
                android:layout_marginLeft="20dp"
                />

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"


            >

            <Button
                android:id="@+id/buttonA"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="kata"


                android:text="@string/but1"
                android:textSize="50dp"

                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >

            <Button
                android:id="@+id/buttonB"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/but2"
                android:textSize="50dp"
                >
            </Button>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >

            <Button
                android:id="@+id/buttonC"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/but3"
                android:textSize="50dp"
                >
            </Button>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >

            <Button
                android:id="@+id/buttonD"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/but4"
                android:textSize="50dp"
                >
            </Button>
        </LinearLayout>

    </LinearLayout>



</LinearLayout>






